# golang-study

./: .gitignore  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: mkdocs.yml
config-ws/: README.md
config-ws/aconfig-default/: go.mod
config-ws/aconfig-default/config/app/: database_config.go  info_config.go
config-ws/aconfig-env/: go.mod  go.sum
config-ws/aconfig-env/cmd/: server.go
config-ws/aconfig-env/config/: app.json  app.yaml
config-ws/aconfig-env/config/app/: config.go  database_config.go  info_config.go  server_config.go
config-ws/aconfig-examples/: example-01.go  go.mod  go.sum
config-ws/aconfig-examples/simple-example/: README.md  example-01.go
config-ws/aconfig-examples/simple-example/config/: app.json
config-ws/aconfig-examples/testdata/: example_config.json
config-ws/aconfig-examples/yaml-example/: go.mod  go.sum  simple-toml-example.go  simple-yaml-example.go
config-ws/aconfig-examples/yaml-example/cmd/: server.go
config-ws/aconfig-examples/yaml-example/config/: app.yaml  application.yaml  example_config.yaml
config-ws/env-example/env-sample-01/: .env  main.go
config-ws/env/env-sample-01/: README.md  go.mod  go.sum  main.go
config-ws/viper/: README.md  go.mod  go.sum
config-ws/viper-example/cmd/: server.go
config-ws/viper-example/config/: app.yaml
config-ws/viper-example/config/app/: config.go
config-ws/viper-with-env/: README.md
config-ws/viper-with-env/cmd/: server.go
config-ws/viper-with-env/config/: app.yaml
config-ws/viper-with-env/config/app/: config.go  database_config.go  info_config.go
config-ws/viper/config/app/: server_config.go
database-ws/: README.md
database-ws/sqlc/config/app/: config.go
database-ws/sqlc/handling-migration/: README.md  go.mod
database-ws/sqlc/handling-migration/cmd/: server.go
database-ws/sqlc/sqlc-sqlite/: README.md  go.mod
database-ws/sqlc/sqlc-sqlite/cmd/: server.go
database-ws/sqlc/sqlc-sqlite/migrations/: 00001_initial_schema.sql
database-ws/sqlx/: go.mod  go.sum
db-migration/goose/: README.md
docs/: app-configuration.md  index.md
examples/config-ws/: README.md
examples/config-ws/aconfig-examples/: README.md
examples/config-ws/aconfig-examples/get-started-example/: go.mod  main.go
examples/config-ws/aconfig-examples/simple-example/: README.md  example-01.go  go.mod  go.sum
examples/config-ws/aconfig-examples/yaml-example/: README.md
examples/config-ws/env-example/env-sample-01/: README.md
examples/config-ws/viper-example/: README.md  go.mod
examples/config-ws/viper-example/cmd/: server.go
examples/config-ws/viper-with-env/: README.md
examples/database-ws/sqlc/: README.md
examples/database-ws/sqlc/handling-migration/: Makefile  sqlc-tutorial.sqlite
examples/database-ws/sqlc/sqlc-sqlite/: README.md  sqlc-tutorial.sqlite
examples/database-ws/sqlx/cmd/: server.go
examples/database-ws/sqlx/config/: app.yaml
examples/go-sdk-ws/concurrency/concurrency-patterns/: README.md
examples/go-sdk-ws/generics/: README.md
examples/go-sdk-ws/generics/example-01/: go.mod  main.go
examples/go-sdk-ws/reflection/: README.md
examples/go-sdk-ws/reflection/01-variable-inspection/: go.mod  kind-check.go  type-check.go  type-vs-kind.go
examples/grpc-in-go/: BUILD.bazel  README.md  WORKSPACE
examples/grpc-in-go/calculator/calculator-server/: BUILD.bazel
examples/grpc-in-go/calculator/calculator-server/rpc/calculator/: BUILD.bazel  calculator_rpc.go
examples/grpc-in-go/greet/: README.md
examples/grpc-in-go/greet/greet-client/: BUILD.bazel  main.go
examples/grpc-in-go/greet/greet-server/: BUILD.bazel
examples/grpc-in-go/greet/greet-server/rpc/greet/: greet_rpc.go
examples/grpc-in-go/order-service/cmd/: BUILD.bazel  main.go
examples/grpc-in-go/order-service/cmd/ds/: server.go
examples/grpc-in-go/order-service/config/app/: config.go  database_config.go
examples/grpc-in-go/order-service/pkg/db/: BUILD.bazel
examples/grpc-in-go/pb-domain/: order.proto
examples/grpc-in-go/pb-domain/calculator/: BUILD.bazel
examples/orm-ws/: README.md
examples/otel-ws/otel-fiber/: go.mod  go.sum  main.go
examples/serverless-ws/error-code-lookup/: Dockerfile  HELP.md  Makefile  README.md  go.mod  go.sum  samconfig.toml  template.yaml
examples/serverless-ws/error-code-lookup/.aws-sam/: build.toml
examples/serverless-ws/error-code-lookup/config/: app-dev.yaml  app-prod.yaml  app.yaml
examples/serverless-ws/error-code-lookup/docs/: ABV-smartlogic.puml  HELP.md  ecode.puml  error.puml  info.puml  tree.puml
examples/serverless-ws/localstack/: README.md  docker-compose.yml  terraform.tfstate.backup
examples/terraform-ws/: README.md
examples/web-framework-ws/fiber/: README.md
go-sdk-ws/concurrency/concurrency-patterns/: boring-channel-2.go  boring-func-1.go
grpc-in-go/: README.md  deps.bzl  go.mod  go.sum
grpc-in-go/calculator/calculator-client/: BUILD.bazel  client.go
grpc-in-go/calculator/calculator-server/: BUILD.bazel  server.go
grpc-in-go/greet-client/: BUILD.bazel  main.go
grpc-in-go/greet-server/: BUILD.bazel  main.go
grpc-in-go/greet/greet-client/: main.go
grpc-in-go/greet/greet-server/: BUILD.bazel  main.go
grpc-in-go/greet/greet-server/rpc/greet/: BUILD.bazel  greet_rpc.go
grpc-in-go/order-service/cmd/: BUILD.bazel
grpc-in-go/order-service/cmd/ds/: server.go
grpc-in-go/order-service/config/: app.yaml
grpc-in-go/order-service/config/app/: BUILD.bazel  config.go
grpc-in-go/pb-domain/: BUILD.bazel  order.proto
grpc-in-go/pb-domain/calculator/: calculator.proto
grpc-in-go/pb-domain/greet/: BUILD.bazel  greet.proto
health-ws/: README.md
health-ws/gin-health-01/: README.md  go.mod  go.sum  main.go
health-ws/go-actuator-02/: README.md  go.mod  go.sum  main.go
health-ws/health-go-03/: go.mod  go.sum  main.go
health-ws/health-go-03/cmd/: server.go
search/: search_index.json
serverless-ws/localstack/: README.md  main.tf  terraform.tfstate
web-framework-ws/fiber/: README.md
web-framework-ws/fiber/fiber-01/: README.md  go.mod  go.sum
web-framework-ws/fiber/fiber-02/: go.mod  go.sum
(+110 files in other folders)
