load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greet-client_lib",
    srcs = ["main.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/greet-client",
    visibility = ["//visibility:private"],
    deps = [
        "//pb-domain/greet",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "greet-client",
    embed = [":greet-client_lib"],
    visibility = ["//visibility:public"],
)
