load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "calculator-client_lib",
    srcs = ["client.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/calculator/calculator-client",
    visibility = ["//visibility:private"],
    deps = [
        "//pb-domain/calculator",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "calculator-client",
    embed = [":calculator-client_lib"],
    visibility = ["//visibility:public"],
)
