load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greet-server_lib",
    srcs = ["main.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/greet/greet-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pb-domain/greet",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "greet-server",
    embed = [":greet-server_lib"],
    visibility = ["//visibility:public"],
)
