load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "greet_proto",
    srcs = ["greet.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greet_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/pb-domain/greet",
    proto = ":greet_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "greet",
    embed = [":greet_go_proto"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/pb-domain/greet",
    visibility = ["//visibility:public"],
)
