load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/order-service/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//order-service/config/app",
        "//order-service/pkg/db",
        "//pb-domain/greet",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
