load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "calculator_proto",
    srcs = ["calculator.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "calculator_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/pb-domain/calculator",
    proto = ":calculator_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "calculator",
    embed = [":calculator_go_proto"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/pb-domain/calculator",
    visibility = ["//visibility:public"],
)
