load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "config.go",
        "database_config.go",
    ],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/order-service/config/app",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_ozzo_ozzo_validation_v4//:ozzo-validation",
        "@com_github_spf13_viper//:viper",
    ],
)
