load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["postgres.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/order-service/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//order-service/config/app",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//schema",
        "@org_uber_go_zap//:zap",
    ],
)
