load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "greet_rpc",
    srcs = ["greet_rpc.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/greet/greet-server/rpc/greet",
    visibility = ["//visibility:public"],
    deps = [
        "//pb-domain/greet",
        "@org_uber_go_zap//:zap",
    ],
)
