load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "calculator_rpc",
    srcs = ["calculator_rpc.go"],
    importpath = "gitlab.con/aionx/go-examples/grpc-in-go/calculator/calculator-server/rpc/calculator",
    visibility = ["//visibility:public"],
    deps = [
        "//pb-domain/calculator",
        "@org_uber_go_zap//:zap",
    ],
)
